2006-01-14  Jeroen Zwartepoorte  <jeroen.zwartepoorte@gmail.com>

	* gtksourceview/gtksourceview.c: (gtk_source_view_class_init),
	(gtk_source_view_expose): Use cairo to draw the right margin. Also draw
	a transparent overlay for everything past the right margin. Margin
	colors and transparency are customizable via style properties. The
	overlay has a negative impact on perforamance for some users, so is
	disabled by default. It can be turned on by adding
	GtkSourceView::right-margin-overlay-toggle = TRUE to your gtkrc.

2006-01-07  Paolo Borelli  <pborelli@katamail.com>

	* gtksourceview/gtktextregion.[ch]:
	* gtksourceview/gtksourcebuffer.c:
	* tests/testregion.c:

	Add iterators to text region and use them.

2006-01-11  Steve Frécinaux  <nud@apinc.org>

	* gtksourceview/language-specs/python.lang: allow to specify both 'u'
	and 'r' modifiers to python strings at the same time.

2006-01-08  Marco Barisione  <barisione@gmail.com>

	* gtksourceview/gtksourcelanguage-private.h,
	gtksourceview/gtksourcelanguage.c: fixes gcc 4.01 compiler warnings on
	different signedness (bug #309663)

2006-01-08  Jeroen Zwartepoorte  <jeroen.zwartepoorte@gmail.com>

	* gtksourceview/gtktextregion.c: (gtk_text_region_add),
	(gtk_text_region_substract): Fix gcc 4.01 compiler warnings.

2006-01-07  Paolo Borelli  <pborelli@katamail.com>

	* gtksourceview/language-specs/scheme.lang: add scheme highlighting.

2006-01-07  Paolo Borelli  <pborelli@katamail.com>

	* gtksourceview/language-specs/*.lang: fix some names to use singular
	for consistency.

2006-01-06  Marco Barisione  <barisione@gmail.com>

	* tests/test-widget.c: added tests to detect memory allocated by
	xmlMalloc() but not freed by xmlFree() or freed by xmlFree() but not
	allocated by xmlMalloc()

2006-01-04  Marco Barisione <barisione@gmail.com>

	* gtksourceview/gtksourceprintjob.c, tests/test-widget.c: added casts
	to avoid warnings on different signedness.