@@ -82,6 +82,31 @@ GtkSourceView
 
 </para>
 
+<!-- ##### ARG GtkSourceView:right-margin-line-alpha ##### -->
+<para>
+
+</para>
+
+<!-- ##### ARG GtkSourceView:right-margin-line-color ##### -->
+<para>
+
+</para>
+
+<!-- ##### ARG GtkSourceView:right-margin-overlay-alpha ##### -->
+<para>
+
+</para>
+
+<!-- ##### ARG GtkSourceView:right-margin-overlay-color ##### -->
+<para>
+
+</para>
+
+<!-- ##### ARG GtkSourceView:right-margin-overlay-toggle ##### -->
+<para>
+
+</para>
+
 <!-- ##### FUNCTION gtk_source_view_new ##### -->
 <para>
 
