@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE language SYSTEM "language.dtd">
-<language _name="XML" version="1.0" _section="Markup" mimetypes="text/xml;image/svg+xml;text/rdf">
+<language _name="XML" version="1.0" _section="Markup" mimetypes="application/xml;text/xml;image/svg+xml;text/rdf">
 	
 	<block-comment _name="Block Comment" style="Comment">
 		<start-regex>&lt;!--</start-regex>
